# rust-streaming-example

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/api/: mod.rs  openapi.rs  routes.rs
src/gemini/: mod.rs  tests.rs
src/models/: mod.rs
src/rig/: mod.rs
